# Manga-Manager

./: .gitignore  BUILD.ps1  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.MD  Dockerfile  Manga Manager.spec  MangaManager.py  MangaManagerV2.bmpr  README.md  SECURITY.md  ai_requirements.txt  collapsiblepane.py  dev.env  dev_aditional_requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt  run.py  sonar-project.properties  tox.ini  update_version.py  ziperfiler.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: feature_request.md  rework_issue
.github/workflows/: Build_Docker_Images.yml  Make_Release.yml  Run_Tests.yml  docker-publish.yml
CoverManagerLib/: CoverManager.py  cbz_handler.py  models.py  tests.py
MangaManager/: MangaManager.py  MangaManager.pyw  MangaManager.spec  MangaManagerCuda.spec  MangaManagerNoCuda.spec  logging_setup.py  main.py  settings.json
MangaManager/CommonLib/: HelperFunctions.py  ProgressBarWidget.py  ScrolledFrame.py  WebpConverter.py
MangaManager/ConvertersLib/: epub2cbz.py  infojsonToCInfo.py
MangaManager/CoverManagerLib/: CoverDownloader.py  CoverManager.py  CoverManager.ui  OLD_CoverManager.py  OUTDATED_ZIPPER_2_COVER_SETTER_UI.ui  cbz_handler.py  errors.py  models.py  tests.py
MangaManager/Extensions/: IExtensionApp.py  Interface.py  Template.py
MangaManager/ExternalSources/: Interface.py  __init__.py
MangaManager/MangaManager/: __init__.py  (+1 more)
MangaTaggerLib/: ComicInfo.py  MangaTagger.py  models.py
SetCoverLib/: CoverManager.py  cbz_handler.py  errors.py  tests.py
src/: logging_setup.py  test_settings.ini
tests/: test python.py  test_comicinfo.py  tests.py
(+328 files in other folders)
