[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MangaManager_ThePromidius"
version = "0.0.1"
authors = [
  { name="ThePromidius", email="thepromidiusyt@gmail.com" },
]
description = "A all-in-one manga managing solution. Holds multiple tool to manage your files. Oriented for manga but compatible with any zip-like file"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"